[package]
name = "overtls"
version = "0.2.41"
edition = "2024"
license = "MIT"
description = "A simple proxy tunnel, minimalist tool for bypassing the GFW."
repository = "https://github.com/ShadowsocksR-Live/overtls"
readme = "readme.md"
rust-version = "1.85"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "overtls-bin"
path = "src/bin/main.rs"

[dependencies]
async-shared-timeout = "0.2"
base64easy = "0.1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc2 = { version = "3", features = ["tokio", "termination"] }
dotenvy = "0.15"
env_logger = "0.11"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
hickory-proto = "0.25"
http = "1"
httparse = "1"
log = { version = "0.4", features = ["std"] }
moka = { version = "0.12", default-features = false, features = ["future"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "logging",
    "ring",
] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
socks5-impl = { version = "0.6", default-features = false, features = [
    "server",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
    "ring",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
url = "2"
webpki-roots = "0.26"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.15"
jni = { version = "0.21", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"

[build-dependencies]
chrono = "0.4"
